--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 {% load static %}
 <html>
 <head>
@@ -13,8 +13,30 @@
 </head>
 <body>
 
-	<h3>Navbar Placeholder</h3>
-    <hr>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+	  
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+			  <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+			</li>
+	   
+		  </ul>
+		  <div class="form-inline my-2 my-lg-0">
+			   <a href="#"class="btn btn-warning">Login</a>
+			   
+			   <a href="{% url 'cart' %}">
+				  <img  id="cart-icon" src="{% static 'images/cart4.png' %}">
+			  </a>
+			  <p id="cart-total">0</p>
+	  
+		  </div>
+		</div>
+	  </nav>
 
      <div class="container">
             <br>
@@ -31,4 +53,6 @@
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-</html> -->
+</html>
+
+
